--- a/phys/Makefile
+++ b/phys/Makefile
@@ -6,6 +6,9 @@ RM      =       rm -f
 
 
 MODULES = \
+    module_lightning_driver.o \
+        module_ltng_cpmpr92z.o \
+        module_ltng_iccg.o \
 	module_cam_shr_kind_mod.o \
 	module_cam_support.o \
 	module_cam_shr_const_mod.o \
@@ -683,5 +686,11 @@ module_mp_morr_two_moment.o :\
 module_mp_wsm3.o :\
 		module_mp_wsm3_accel.F
 
+module_lightning_driver.o : \
+        module_ltng_cpmpr92z.o module_ltng_iccg.o
+
+module_ltng_cpmpr92z.o :
+
+module_ltng_iccg.o :
 
 # DO NOT DELETE
